--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Document</title>
+  <title>Function Iteration</title>
 </head>
 <body>
   <script src="scripts/items.js"></script>
